--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,25 @@
 {
   "manifest_version": 3,
   "name": "Auto Tab Grouper",
-  "version": "1.2",
+  "version": "1.3",
   "description": "Groeperen van tabbladen op basis van base URL.",
   "permissions": [
     "tabs",
-    "tabGroups"
+    "tabGroups",
+    "storage"
   ],
   "background": {
     "service_worker": "background.js"
   },
   "host_permissions": [
     "<all_urls>"
-  ]
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/icon-16.png",
+      "64": "images/icon-64.png",
+      "128": "images/icon-128.png"
+    }
+  }
 }
